# apng2webp

./: .appveyor.yml  .gitattributes  .gitignore  .travis.yml  LICENSE.txt  README.md  setup.py
apng2webp/: apng2webp  apng2webp.py  requirements.pip  setup.py  winrequirements.pip
apng2webp/test/: test_apng2webp.py
apng2webp_dependencies/: CMakeLists.txt  License.txt
apng2webp_dependencies/apng2webp_apngopt/: apngopt.c  apngopt.cpp  readme.txt
apng2webp_dependencies/apng2webp_apngopt/7z/: AriBitCoder.cc  BinTreeMain.h  DeflateDecoder.cc  LiteralCoder.cc
apng2webp_dependencies/apngdisraw/: apngdis.cpp  readme.txt
apng2webp_dependencies/cmake/Modules/: FindJsoncpp.cmake
apngdis-2.6-src/: Makefile  apngdis.cpp  readme.txt
apngdis-2.6-src/projects/vs2010/: apngdis.sln  apngdis.vcxproj  apngdis.vcxproj.filters
apngdis-2.6-src/projects/xcode/apngdis.xcodeproj/: project.pbxproj
apngopt-1.2-src/: Makefile  apngopt.c  readme.txt
